--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/preset-env": "^7.9.5",
     "autoprefixer": "^9.7.6",
     "babel-loader": "^8.1.0",
+    "benz-amr-recorder": "^1.1.2",
     "clean-webpack-plugin": "^0.1.17",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.5.2",
